# ros2-ws-ai4di

./: .gitignore  .gitmodules  LICENSE  Launch_all.py  Launch_rpi-cam.py  Launch_rpi-lidar.py  README.md  border_checker_filter.yaml  border_checker_rest.yaml  launch_params.yaml  launch_webcam_det.py  map_server_costmap.launch.py  pub_with_tf.py  requirements.txt  video_creator.py  webcam.rviz
daemon/: measurement.service  startup.sh
daemon/datalogger/: Launch_MTDL.py  measurement.service
daemon/jetson/: jetson-startup.sh  jetson.service  run.sh
daemon/rpi-cam/: rpi-cam-startup.sh  rpi-cam.service
daemon/rpi-lidar/: rpi-lidar-startup.sh  rpi-lidar.service
doc/: Ai4di dokumentace.docx  Rpi-ros-Install
launch/: Launch_all.py  Launch_jetson.py  Launch_prezentation.py  Launch_rpi-cam.py  Launch_rpi-lidar.py  Launch_tf.py  Launch_tf_with_mapserver.py  Launch_tracker.py  cloud_to_scan_launch.py  detect_launch.py  experiment_launch.py  launch_webcam_det.py  viz_launch.py
maps/: SE1_102_map_5cmpx.pgm  SE1_102_map_5cmpx.yaml  SE1_102_map_new.pgm  SE1_102_map_new.yaml  small_testbed_ceitec_map_10cmpx.pgm  small_testbed_ceitec_map_10cmpx.yaml
params/: all.rviz  border_checker_floor.yaml  detector_node_params.yaml  launch_params.yaml  launch_params_cam.yaml  mereni.rviz  prezentation.rviz
src/border_checker/: CMakeLists.txt  package.xml
src/border_checker/src/: border_checker.cpp
src/clustering/: CMakeLists.txt  package.xml
src/clustering/src/: clustering.cpp
src/cpp_examples/: CMakeLists.txt  package.xml
src/cpp_examples/include/cpp_examples/: visibility_control.h
src/cpp_examples/src/: action_client.cpp  action_server.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/action/: CustomAction.action
src/custom_interfaces/msg/: CustomMsg.msg
src/detection_matcher_py/: package.xml  setup.cfg  setup.py
src/detection_matcher_py/detection_matcher_py/: detection_matcher_node.py  tester_node.py
src/detection_visualizer/: package.xml  setup.py
src/detection_visualizer/detection_visualizer/: __init__.py  decompressor.py  det2d.py  det3d.py
src/image_tools_custom/: CMakeLists.txt  package.xml
src/image_tools_custom/src/: cam2image.cpp
src/img_pub_py/: package.xml  setup.cfg  setup.py
src/img_pub_py/img_pub_py/: file_pub.py  img_pub_py.py
src/map_lookup/: CMakeLists.txt  package.xml
src/map_lookup/src/: map_lookup.cpp
src/pcl_preprocessing/: CMakeLists.txt  package.xml
src/pcl_preprocessing/src/: pcl_preprocessing.cpp
src/pcl_pub_cpp/: CMakeLists.txt  package.xml
src/pcl_pub_cpp/src/: pcl_pub.cpp  pcl_pub_cpp_node.cpp
src/pcl_pub_py/: package.xml  setup.cfg  setup.py
src/pcl_pub_py/pcl_pub_py/: file_pub.py
src/projection/: CMakeLists.txt  package.xml
src/projection/src/: projection.cpp
src/python_examples/: package.xml  setup.cfg  setup.py
src/python_examples/python_examples/: action_client.py  action_server.py
src/tracker/: package.xml  setup.cfg  setup.py
src/tracker/tracker/: tracker.py
src/tracker/tracker/deep_sort/: detection.py  generate_detections.py  iou_matching.py  kalman_filter.py  linear_assignment.py  track.py  tracker.py
src/writer/: package.xml  setup.cfg  setup.py
src/writer/writer/: writer.py
src/writer_cpp/: CMakeLists.txt  package.xml
src/writer_cpp/src/: writer_cpp_node.cpp
src/yolov5_ros/launch/: yolov5s_simple.launch.py
src/yolov5_ros/yolov5_ros/: main.py
